# convmerge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  fetch_issue.yml  new_adapter.yml
.github/workflows/: ci.yml  publish.yml
docs/: custom_presets.md  fetch.md  format.md  migration-0.3.md
examples/: README.md
examples/manifests/: alpaca_hf.yaml  mixed_sources.yaml  sharegpt_hf.yaml
examples/recipes/: build_sft_from_mixed_jsonl.py
src/convmerge/: __init__.py  __main__.py  adapter_resolve.py  cli.py  config.py  convert.py  emitters.py  mix.py  models.py  pipeline.py  preset.py
src/convmerge/adapters/: __init__.py  alpaca.py  chat.py  sharegpt.py
src/convmerge/fetch/: __init__.py  auth.py  git.py  github.py  hf.py  manifest.py  runner.py
src/convmerge/normalize/: __init__.py  convert_turns.py  dedup.py  jsonl.py  merge.py  parquet.py  reshape.py  resume.py  sample.py  schema.py  split.py  turns.py
tests/: __init__.py  test_adapters.py  test_chat_adapter.py  test_cli.py  test_cli_preset.py  test_convert.py  test_fetch_auth.py  test_fetch_git.py  test_fetch_github.py  test_fetch_hf.py  test_fetch_manifest.py  test_fetch_runner.py  test_mix.py  test_normalize_convert_turns.py  test_normalize_dedup.py  test_normalize_jsonl.py  test_normalize_merge_split_sample.py  test_normalize_parquet.py  test_normalize_primitives.py  test_normalize_reshape.py  test_normalize_schema.py  test_normalize_turns.py  test_pipeline.py  test_pipeline_compat.py  test_preset.py
tests/fixtures/: alpaca_one.jsonl  sharegpt_one.jsonl
