[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convmerge"
version = "0.1.0"
description = "Merge heterogeneous chat/text sources into a single LLM training format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "convmerge contributors" }]
keywords = ["llm", "sft", "jsonl", "chat", "dataset"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
convmerge = "convmerge.cli:main"

[project.urls]
Homepage = "https://github.com/snowmuffin/convmerge"
Repository = "https://github.com/snowmuffin/convmerge"
Issues = "https://github.com/snowmuffin/convmerge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/convmerge"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
