[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convmerge"
version = "0.2.1"
description = "Fetch, normalize, and convert heterogeneous chat/instruct datasets into a single LLM training format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "convmerge contributors" }]
keywords = [
  "llm",
  "sft",
  "fine-tuning",
  "dataset",
  "data-preparation",
  "jsonl",
  "parquet",
  "chat",
  "instruction-tuning",
  "alpaca",
  "sharegpt",
  "huggingface-datasets",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
# YAML manifest fetcher (GitHub raw / Trees API / git clone). Uses stdlib urllib for HTTP.
fetch = ["pyyaml>=6.0"]
# HuggingFace support for fetch (delegates to the ``datasets`` library).
fetch-hf = ["pyyaml>=6.0", "datasets>=2.16"]
# Alias: everything fetch-related.
fetch-all = ["pyyaml>=6.0", "datasets>=2.16"]
# Parquet streaming input for normalize.
parquet = ["pyarrow>=14"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
convmerge = "convmerge.cli:main"

[project.urls]
Homepage = "https://github.com/snowmuffin/convmerge"
Repository = "https://github.com/snowmuffin/convmerge"
Issues = "https://github.com/snowmuffin/convmerge/issues"
Changelog = "https://github.com/snowmuffin/convmerge/blob/main/CHANGELOG.md"
Documentation = "https://github.com/snowmuffin/convmerge#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/convmerge"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
